--- a/src/main/resources/assets/tradingpost/lang/en_us.lang
+++ b/src/main/resources/assets/tradingpost/lang/en_us.lang
@@ -1,5 +1,4 @@
-tile.tallBlock.name=Tall Block
-item.tallBlock.name=Tall Block
+item.tradingpost.name=Trading Post
 tile.testBlock.name=Test Block
 
 itemGroup.devnull=dev/NULL/
